add scheduling api
